Use redux to fetch categories

--- a/src/components/categories/Categories.scss
+++ b/src/components/categories/Categories.scss
@@ -1,17 +1,17 @@
-.categories {
+.Categories {
   width: 20%;
   height: 100vh;
-  border-right: 1px #B2BABB solid;
+  border-right: 1px #b2babb solid;
 
   .menu {
     width: 100% !important;
     padding: 10px 25px !important;
   }
 
-  .header {
-    color: #17A589 !important;
-    font-size: 25px !important;
-  }
+  // .header {
+  //   color: #17A589 !important;
+  //   font-size: 25px !important;
+  // }
 
   .empty {
     margin: 15px 0;
