--- a/src/components/categories/Categories.scss
+++ b/src/components/categories/Categories.scss
@@ -1,7 +1,8 @@
 .Categories {
   .menu {
     border-radius: 0 !important;
-    height: 100vh;
+    min-height: 100vh;
+    padding-bottom: 100px;
     width: 300px !important;
   }
 }
