Fetch notes when a category is selected

--- a/src/components/categories/Categories.scss
+++ b/src/components/categories/Categories.scss
@@ -1,7 +1,7 @@
 .Categories {
   .menu {
     border-radius: 0 !important;
-    min-height: 100vh;
+    height: 100vh;
     padding-bottom: 100px;
     width: 300px !important;
   }
