--- a/src/components/note/Note.scss
+++ b/src/components/note/Note.scss
@@ -1,7 +1,7 @@
 .Note {
-  width: 30%;
   min-width: 300px;
-  height: 150px;
+  height: 125px;
+  margin-right: 8px;
 
   .card {
     width: 100%;
