Update dashboard stylying and visuals

--- a/src/components/note/Note.scss
+++ b/src/components/note/Note.scss
@@ -1,7 +1,9 @@
 .Note {
+  width: 350px;
   min-width: 300px;
-  height: 125px;
+  height: 140px;
   margin-right: 8px;
+  margin-bottom: 8px;
 
   .card {
     width: 100%;
