Add modal to create new note

--- a/src/components/note/Note.scss
+++ b/src/components/note/Note.scss
@@ -2,8 +2,7 @@
   width: 350px;
   min-width: 300px;
   height: 140px;
-  margin-right: 8px;
-  margin-bottom: 8px;
+  margin: 8px 8px 8px 0;
 
   .card {
     width: 100%;
